--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-minimal
 title: Welcome to my website!
-description: Read through some of my writing below
+description: Read through some of my work below
